<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">prefer</string>
    <string name="hello_world">Hello world!</string>
    <!-- MainActivity里面的变量 -->
    <string name="button1">Massage练习</string>
    <string name="button2">进行登录系统操作</string>
    <string name="button3">Android硬件使用</string>
    <string name="button4">sd卡</string>
    <string name="button5">service使用</string>
    <string name="button6">fragment使用</string>
    <string name="button7">设置使用</string>
    <string name="button8">网络使用</string>
    <string name="button9">异步任务练习</string>
    <string name="button10">组件的练习</string>
     <string name="button11">百度TTS</string>
      <string name="button12">UI练习</string>
      <string name="button13">JsonTest</string>
      <string name="button14">Service方式使用</string>
    <string name="first_title">练习</string>
    
    <!-- massage里面的变量 -->
    <string name="title_self">消息问题测试</string>
    <string name="massagebutton1">用Handler.sendMassage发送消息</string>
    <string name="massagebutton2">用Message.sendToTarget发送消息</string>
    <string name="massagebutton3">发送空消息</string>
    <string name="massagebutton4">用Handler.sendMassage发送延迟消息</string>
    <string name="massagebutton5">发送延迟空消息</string>
    
    <!-- com.service里面使用到的变量 -->
    <string name="startService">使用start启动service</string>
    <string name="bindService">使用bindService启动service</string>

</resources>
