<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
      >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button 
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2" /> 
     <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3" /> 
     <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4" /> 
      
       <Button
        android:id="@+id/button5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5" /> 
       <Button
        android:id="@+id/button6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button6" /> 
       <Button
        android:id="@+id/button7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button7" /> 
       <Button
        android:id="@+id/button8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button8" /> 
       <Button
        android:id="@+id/button9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button9" /> 
       <Button
        android:id="@+id/button10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button10" /> 
       <Button
        android:id="@+id/button11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button11" /> 
               <Button
        android:id="@+id/button12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button12" /> 


		<Button android:id="@+id/JsonTest"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button13"/>
		<!-- 新添加Button进行service练习 -->
		<Button 
		    android:id="@+id/serviceTest"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button14"/>
		"
		<EditText 
         android:id="@+id/ed1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
    
	</LinearLayout>
</ScrollView>